# mcmdd

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md  build_tar.sh  config.c  config.h  control.c  main.c  mcmdd.1  mcmdd.conf  mcmdd.init  mcmdd.service  mcmdd.spec  me.cmastudios.mcmdd.plist  server.c  server.h
debian/: changelog  conffiles  control  copyright  mcmdd.manpages  postinst  postrm  rules
docker/: Dockerfile
