project(mcmdd)
cmake_minimum_required(VERSION 2.8)
find_package (Threads)
aux_source_directory(. SRC_LIST)
add_executable(${PROJECT_NAME} ${SRC_LIST})
target_link_libraries (${PROJECT_NAME} ${CMAKE_THREAD_LIBS_INIT})
install(TARGETS mcmdd RUNTIME DESTINATION bin)
if(WITH_SYSTEMD)
	install(FILES mcmdd.service DESTINATION ${SYSTEMD_LIB_INSTALL_DIR})
	install(FILES mcmdd.conf DESTINATION /var/local/mcmdd)
elseif(WITH_LAUNCHD)
	install(FILES me.cmastudios.mcmdd.plist DESTINATION ~/Library/LaunchAgents)
	install(FILES mcmdd.conf DESTINATION ~/Library/Application\ Support/mcmdd)
else()
	install(FILES mcmdd.init DESTINATION /etc/init.d RENAME mcmdd)
	install(FILES mcmdd.conf DESTINATION /var/local/mcmdd)
endif(WITH_SYSTEMD)
